# mamba-tabular

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  example_classification.py  example_distributional.py  example_embedding_regression.py  example_regression.py  justfile  paper.md  pyproject.toml  readthedocs.yaml  requirements.txt  requirements_docs.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build-publish-pypi.yml  draft-pdf.yml  pr-tests.yml  publish.yml
docs/: conf.py  contributing.md  development.md  homepage.md  index.rst  installation.md  introduction.md  mamba.md  mdinclude.py  quickstart.md  release.md  requirements_docs.txt
docs/examples/: classification.rst  distributional.rst  embedding.rst  regression.rst
efficiency/: efficiency.ipynb
examples/: example_classification.py  example_distributional.py  example_regression.py
mambular/: __init__.py  __version__.py
mambular/arch_utils/: attention_net_arch_utils.py  attention_utils.py  cnn_utils.py  data_aware_initialization.py  embedding_layer.py  enode_utils.py  get_norm_fn.py  learnable_ple.py  lstm_utils.py  mamba_arch.py  mambattn_arch.py  mlp_utils.py  neural_decision_tree.py  node_utils.py  normalization_layers.py  numpy_utils.py  poly_layer.py  resnet_utils.py  rnn_utils.py  rotary_utils.py  simple_utils.py  transformer_utils.py  trompt_utils.py
mambular/base_models/: __init__.py  autoint.py  basemodel.py  basis_expansion_fttransformer.py  batch_tabrnn.py  classifier.py  cnn.py  distributional.py  embedding_classifier.py  embedding_regressor.py  enode.py  ft_transformer.py  ftet.py  lightning_wrapper.py  mambatab.py  mambattn.py  mambular.py  mambular_base.py  mlp.py  modern_nca.py  ndtf.py  node.py  regressor.py  resnet.py  rnn.py  rotary_fttransformer.py  saint.py  tabm.py  tabr.py  tabtransformer.py  tabularnn.py  tangos.py  trem.py  trompt.py
mambular/configs/: __init__.py  autoint_config.py  base_config.py  batchtabrnn_config.py  cnn_config.py  enode_config.py  ftet_config.py  fttransformer_config.py  mambatab_config.py  mambattention_config.py  mlp_config.py  (+15 more)
paper/: paper.bib  paper.md
tests/: test_base.py  test_classifier.py  test_configs.py  test_distributions.py  test_lss.py  test_preprocessor.py  test_regressor.py
(+278 files in other folders)
